<resources>
    <string name="app_name">GestaoFinanceira</string>
    <string name="nomeUsuario">Insira seu Nome:</string>
    <string name="editTextNomeUser">Nome Usuario</string>
    <string name="contasPagar">Contas à Pagar:</string>
    <string name="checkAluguel">Aluguel</string>
    <string name="checkMercado">Mercado</string>
    <string name="buttonLimpar">Limpar</string>
    <string name="buttonSalvar">Salvar</string>
    <string name="nenhuma_opcao">Selecione uma opção de contas à pagar!</string>
    <string name="selecionado">Foram selecionados</string>
    <string name="mensagem_desmarcar">Todos itens desmarcados!</string>
    <string name="sexoUser">Informe seu genero:</string>
    <string name="radioMas">Masculino</string>
    <string name="radioFem">Feminino</string>
    <string name="foiSelecionado">foi selecionado</string>
    <string name="nenhuma_op">Nenhuma opção selecionada</string>
    <string name="vencimento">Escolha uma data de vencimento:</string>
    <string name="venc1">5</string>
    <string name="venc2">10</string>
    <string name="venc3">15</string>
    <string name="venc4">20</string>
    <string name="venc5">25</string>
    <string name="venc6">30</string>
    <string name="error_nome">Nome não pode estar vazio!</string>
    <string name="foi_selecionado">foi selecionado</string>
    <string name="nada_selecionado">Informe seu genero, por gentileza!</string>
    <string name="title_activity_second">SecondActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="idadeUsuario">idadeUsuario</string>
    <string name="generoUsuario">Informe seu genero</string>
    <string name="userSalario">Informe seu Salario</string>
    <string name="btnListView">Ver Lista de Usuarios</string>


    <string name="Paulo">Paulo</string>
    <string name="Pedro">Pedro</string>
    <string name="Ronaldo">Ronaldo</string>
    <string name="Fernando">Fernando</string>
    <string name="Matheus">Matheus</string>
    <string name="Maria">Maria</string>
    <string name="Rosa">Rosa</string>
    <string name="Carla">Carla</string>
    <string name="Marilza">Marilza</string>
    <string name="Clarisse">Clarisse</string>

    <string name="Masculino">Masculino</string>
    <string name="Feminino">Feminino</string>
    <string name="foi_clicado">" foi clicado!"</string>
    <string name="textNomeDev">Paulo Henrique Molinari Calderan</string>
    <string name="textEmailDev">paulo_calderan@outlook.com</string>
    <string name="textSistema">A finalidade do software é ajudar o usuário a controlar sua vida financeira.</string>
    <string name="direitoAutoral">© 2022</string>
    <string name="activity_listagem">ListagemActivityActivity</string>
    <string name="buttonNovo">Novo</string>
    <string name="buttonSobre">Sobre</string>
    <string name="buttonInfo">Sobre</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="buttonCancelar">Cancelar Cadastro</string>
    <string name="itemSalvar">Salvar</string>
    <string name="item_Salvar">Salvar</string>
    <string name="itemSobre">Sobre</string>
    <string name="itemAdicionar">Adicionar</string>
    <string name="menuEditar">Editar</string>
    <string name="menuExcluir">Excluir</string>
    <string name="menu_Excluir">Excluir</string>
    <string name="stringIdade">Infome Idade:</string>
    <string name="stringSalario">Salario:</string>
    <string name="buttonAlterar">alterar</string>
    <string name="buttonalterar">Alterar</string>
    <string name="menuLimpar">limpar</string>
    <string name="menuAlterar">Alterar</string>
    <string name="novo_usuario">Novo Usuario</string>
    <string name="alterar_usuario">Alterar Usuario</string>
</resources>