<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UsuarioActivity">

    <ScrollView
        android:layout_width="318dp"
        android:layout_height="569dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.169">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nomeUsuario"
                android:layout_width="297dp"
                android:layout_height="20dp"
                android:text="@string/nomeUsuario" />

            <EditText
                android:id="@+id/editTextNomeUser"
                android:layout_width="297dp"
                android:layout_height="47dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPersonName"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/idadeUsuario"
                android:layout_width="297dp"
                android:layout_height="20dp"
                android:text="@string/idadeUsuario" />

            <EditText
                android:id="@+id/editTextIdadeUser"
                android:layout_width="297dp"
                android:layout_height="47dp"
                android:ems="10"
                android:inputType="textPersonName"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/salarioUsuario"
                android:layout_width="297dp"
                android:layout_height="20dp"
                android:text="@string/userSalario" />

            <EditText
                android:id="@+id/editTextSalUser"
                android:layout_width="297dp"
                android:layout_height="47dp"
                android:ems="10"
                android:inputType="textPersonName"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/sexoUser"
                android:layout_width="297dp"
                android:layout_height="20dp"
                android:text="@string/sexoUser" />

            <RadioGroup
                android:id="@+id/radioGroupSex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioButtonMas"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:text="@string/radioMas" />

                <RadioButton
                    android:id="@+id/radioButtonFem"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:text="@string/radioFem" />

            </RadioGroup>

            <TextView
                android:id="@+id/textViewContas"
                android:layout_width="297dp"
                android:layout_height="20dp"
                android:text="@string/contasPagar" />

            <CheckBox
                android:id="@+id/checkBoxMercado"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/checkMercado" />

            <CheckBox
                android:id="@+id/checkBoxAluguel"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/checkAluguel" />

            <TextView
                android:id="@+id/textViewVeencimento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vencimento" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="297dp"
                android:layout_height="40dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/buttonLimpar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="desmarcarTodos"
                android:text="@string/buttonLimpar" />

            <Button
                android:id="@+id/buttonSalvar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="salvar"
                android:text="@string/buttonSalvar" />

            <Button
                android:id="@+id/buttonCancelar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="cancelar"
                android:text="@string/buttonCancelar" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>