<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DadosDevActivity">

    <TextView
        android:id="@+id/textViewNome3"
        android:layout_width="376dp"
        android:layout_height="87dp"
        android:text="@string/textSistema"
        app:layout_constraintEnd_toEndOf="@+id/textViewEmail"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="@+id/textViewEmail"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmail" />

    <TextView
        android:id="@+id/textViewNome"
        android:layout_width="376dp"
        android:layout_height="31dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/textNomeDev"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="376dp"
        android:layout_height="31dp"
        android:text="@string/textEmailDev"
        app:layout_constraintEnd_toEndOf="@+id/textViewNome"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textViewNome"
        app:layout_constraintTop_toBottomOf="@+id/textViewNome" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="376dp"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="@+id/textViewNome3"
        app:layout_constraintStart_toStartOf="@+id/textViewNome3"
        app:layout_constraintTop_toBottomOf="@+id/textViewNome3"
        app:srcCompat="@drawable/logoutfpr"
        tools:srcCompat="@drawable/logoutfpr" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="40dp"
        android:text="@string/direitoAutoral"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView3" />

</androidx.constraintlayout.widget.ConstraintLayout>